# GCP_Deployment

./: .cursorrules  Dockerfile  Makefile  README.md  pyproject.toml
server/: server.py
src/gcp_terraform_deployment/: __init__.py
tf-cdk/: cdktf.json  main.ts  package-lock.json  package.json  variables.ts
tf-cdk/modules/: artifactRegistry.ts  cloudRun.ts
